tests/error/07_list_type.py
# Cannot infer type from empty list
# Type Checker Error: Referencing undefined function "print"
for v in []:
	print(v)
